# parolla-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  containers.py  helpers.py  main.py  setup.py
app/api/cli/: __init__.py  __main__.py  echo.py
app/api/events/: mattermost.py  stripe.py
app/api/rest/: router.py
app/api/rest/routes/v1/: health.py  user_api.py
app/api/schemas/exceptions/: errors.py
app/api/schemas/request/: user.py
app/api/schemas/response/: user.py
app/domain/: READNE.md  models.py
app/infra/clients/: stripe.py
app/infra/database/: base.py  database.py  helpers.py  models.py  repositories.py
app/infra/events/: queues.py
app/infra/interfaces/: __init__.py  chat.py  repository.py
app/infra/unit_of_work/: database.py
app/services/: new_message.py
app/use_cases/: evaluate_student.py  interface.py  user_service.py
app/use_cases/components/: intent_checker.py  spellcheck.py
app/worker/: worker.py
migrations/: env.py
migrations/versions/: 2024_07_27_2320-0712a10513c5_intial_database_for_parolla_bot.py  2024_07_28_2123-96d4164ad292_remove_from_model_already_base_.py  2024_07_28_2219-1c59765cc871_change_the_default_value_for_guid.py  2024_07_28_2221-7ca3c9115d10_convert_guid_to_string.py
